Updated the ipynb

--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -77,17 +77,21 @@
       "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "- Identifying ahenk of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+      "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
      ]
     }
    ],
    "source": [
     "# joint analysis\n",
-    "joint_features = jointAnalyzer.analyze(score_filepath, score_features,\n",
-    "                                       audio_filepath, audio_features['pitch'])\n",
+    "joint_features, score_informed_audio_features = jointAnalyzer.analyze(\n",
+    "    score_filepath, score_features, audio_filepath, audio_features['pitch'])\n",
     "\n",
-    "updated_audio_features = audioAnalyzer.analyze_from_pitch_tonic(\n",
-    "    joint_features['pitch'], joint_features['tonic'])\n"
+    "# redo some steps in audio analysis\n",
+    "score_informed_audio_features = audioAnalyzer.update_analysis(score_informed_audio_features)\n",
+    "\n",
+    "# summarize all the features extracted from all sources\n",
+    "summarized_features = jointAnalyzer.summarize(audio_features, score_features, \n",
+    "                                              joint_features, score_informed_audio_features)\n"
    ]
   },
   {
@@ -112,7 +116,10 @@
       "- Extracting score-informed tonic and tempo of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
       "- Aligning audio recording ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 and music score ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt.\n",
       "- Filtering predominant melody of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3 after audio-score alignment.\n",
-      "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
+      "- Computing the note models for ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
+      "- Identifying the transposition of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
      ]
     }
    ],
@@ -131,35 +138,9 @@
     "\n",
     "# aligned note model\n",
     "note_models, pitch_distribution, aligned_tonic = jointAnalyzer.get_note_models(\n",
-    "    pitch_filtered, notes_filtered, tonic['symbol'])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Then you can recompute the audio features using the filtered pitch and tonic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Obtaining the melodic progression model of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "- Computing pitch distribution of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n",
-      "- Identifying ahenk of ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/f970f1e0-0be9-4914-8302-709a0eac088e/f970f1e0-0be9-4914-8302-709a0eac088e.mp3\n"
-     ]
-    }
-   ],
-   "source": [
-    "# recompute the audio features\n",
+    "    pitch_filtered, notes_filtered, tonic['symbol'])\n",
+    "\n",
+    "# recompute the audio features using the filtered pitch and tonic\n",
     "# get the melodic progression model\n",
     "melodic_progression = audioAnalyzer.get_melodic_progression(pitch_filtered)\n",
     "\n",
@@ -168,7 +149,7 @@
     "pitch_class_distribution = pitch_distribution.to_pcd()\n",
     "\n",
     "# transposition (ahenk) identification\n",
-    "ahenk = audioAnalyzer.identify_ahenk(aligned_tonic, aligned_tonic['symbol'])\n"
+    "ahenk = audioAnalyzer.identify_transposition(aligned_tonic, aligned_tonic['symbol'])\n"
    ]
   }
  ],
