Added joint and complete analysis demo

--- a/audio_analysis_demo.ipynb
+++ b/audio_analysis_demo.ipynb
@@ -79,10 +79,7 @@
     "\n",
     "# plot the features\n",
     "audioAnalyzer.plot(features)\n",
-    "pylab.show()\n",
-    "\n",
-    "# save the features to pickle\n",
-    "audioAnalyzer.to_pickle(features, save_filepath)\n"
+    "pylab.show()\n"
    ]
   },
   {
