--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -34,7 +34,7 @@
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n"
+    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)"
    ]
   },
   {
@@ -62,10 +62,7 @@
     }
    ],
    "source": [
-    "score_data, is_data_valid = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)\n",
-    "\n",
-    "# save features\n",
-    "scoreAnalyzer.to_pickle(score_data, save_filepath)"
+    "score_data = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)"
    ]
   },
   {
@@ -108,9 +105,9 @@
     "# Extract the (meta)data from the SymbTr scores\n",
     "# This includes the metadata from the score formats and MusicBrainz, extracted sections\n",
     "# rhythmic structure etc.\n",
-    "score_data, is_data_valid = scoreAnalyzer.extract_data(\n",
+    "score_data = scoreAnalyzer.extract_data(\n",
     "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbid, \n",
-    "    segment_note_bound_idx=phrase_bounds['boundary_note_idx'])\n"
+    "    segment_note_bound_idx=phrase_bounds['boundary_note_idx'])"
    ]
   },
   {
