--- a/joint_analysis_demo.ipynb
+++ b/joint_analysis_demo.ipynb
@@ -14,7 +14,7 @@
     "from tomato.symbolic.SymbTrAnalyzer import SymbTrAnalyzer\n",
     "from tomato.joint.JointAnalyzer import JointAnalyzer\n",
     "import pylab\n",
-    "pylab.rcParams['figure.figsize'] = (20, 8)"
+    "pylab.rcParams['figure.figsize'] = (20, 8)\n"
    ]
   },
   {
@@ -44,7 +44,7 @@
     "# instantiate analyzer objects\n",
     "scoreAnalyzer = SymbTrAnalyzer(verbose=True)\n",
     "audioAnalyzer = AudioAnalyzer(verbose=True)\n",
-    "jointAnalyzer = JointAnalyzer(verbose=True)"
+    "jointAnalyzer = JointAnalyzer(verbose=True)\n"
    ]
   },
   {
@@ -116,7 +116,7 @@
     "    txt_score_filepath, score_data, audio_filepath, audio_pitch)\n",
     "\n",
     "# redo some steps in audio analysis\n",
-    "score_informed_audio_features = audioAnalyzer.update_analysis(score_informed_audio_features)"
+    "score_informed_audio_features = audioAnalyzer.update_analysis(score_informed_audio_features)\n"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "melodic_progression = audioAnalyzer.get_melodic_progression(pitch_filtered)\n",
     "\n",
     "# transposition (ahenk) identification\n",
-    "ahenk = audioAnalyzer.identify_transposition(aligned_tonic, aligned_tonic['symbol'])"
+    "transposition = audioAnalyzer.identify_transposition(aligned_tonic, aligned_tonic['symbol'])\n"
    ]
   }
  ],
@@ -196,7 +196,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
