--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -62,7 +62,7 @@
     }
    ],
    "source": [
-    "score_data = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)"
+    "score_data = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)\n"
    ]
   },
   {
@@ -107,7 +107,7 @@
     "# rhythmic structure etc.\n",
     "score_data = scoreAnalyzer.extract_data(\n",
     "    txt_filepath, mu2_filepath, symbtr_name=symbtr_name, mbid=mbid, \n",
-    "    segment_note_bound_idx=phrase_bounds['boundary_note_idx'])"
+    "    segment_note_bound_idx=phrase_bounds['boundary_note_idx'])\n"
    ]
   },
   {
@@ -574,7 +574,7 @@
       "                             'flavor': [],\n",
       "                             'lyric_structure': 'INSTRUMENTAL',\n",
       "                             'lyrics': '',\n",
-      "                             'melodic_structure': u'T1',\n",
+      "                             'melodic_structure': u'D2',\n",
       "                             'name': u'INSTRUMENTAL_PHRASE',\n",
       "                             'sections': [{'lyric_structure': 'INSTRUMENTAL',\n",
       "                                           'melodic_structure': u'TESLIM_1',\n",
@@ -585,7 +585,7 @@
       "                             'flavor': [],\n",
       "                             'lyric_structure': 'INSTRUMENTAL',\n",
       "                             'lyrics': '',\n",
-      "                             'melodic_structure': u'U1',\n",
+      "                             'melodic_structure': u'T1',\n",
       "                             'name': u'INSTRUMENTAL_PHRASE',\n",
       "                             'sections': [{'lyric_structure': 'INSTRUMENTAL',\n",
       "                                           'melodic_structure': u'TESLIM_1',\n",
@@ -599,7 +599,7 @@
       "                             'flavor': [],\n",
       "                             'lyric_structure': 'INSTRUMENTAL',\n",
       "                             'lyrics': '',\n",
-      "                             'melodic_structure': u'T1',\n",
+      "                             'melodic_structure': u'D2',\n",
       "                             'name': u'INSTRUMENTAL_PHRASE',\n",
       "                             'sections': [{'lyric_structure': 'INSTRUMENTAL',\n",
       "                                           'melodic_structure': u'TESLIM_1',\n",
@@ -610,7 +610,7 @@
       "                             'flavor': [],\n",
       "                             'lyric_structure': 'INSTRUMENTAL',\n",
       "                             'lyrics': '',\n",
-      "                             'melodic_structure': u'V1',\n",
+      "                             'melodic_structure': u'U1',\n",
       "                             'name': u'INSTRUMENTAL_PHRASE',\n",
       "                             'sections': [{'lyric_structure': 'INSTRUMENTAL',\n",
       "                                           'melodic_structure': u'TESLIM_1',\n",
@@ -751,7 +751,7 @@
    ],
    "source": [
     "# pretty print the data\n",
-    "pprint(score_data)"
+    "pprint(score_data)\n"
    ]
   }
  ],
