Added verbose and timit to changelog

--- a/score_analysis_demo.ipynb
+++ b/score_analysis_demo.ipynb
@@ -34,7 +34,7 @@
     "symbtr_name = 'ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede'\n",
     "\n",
     "# instantiate analyzer object\n",
-    "scoreAnalyzer = SymbTrAnalyzer(verbose=True)"
+    "scoreAnalyzer = SymbTrAnalyzer(verbose=False)"
    ]
   },
   {
@@ -50,20 +50,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 9.16 seconds to execute.\n",
-      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.61 seconds to execute.\n",
-      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.01 seconds to execute.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score_data = scoreAnalyzer.analyze(txt_filepath, mu2_filepath, symbtr_name=symbtr_name)\n"
    ]
@@ -83,20 +70,7 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "- Automatic phrase segmentation on the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 8.54 seconds to execute.\n",
-      "- Extracting (meta)data from the SymbTr-txt file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.txt\n",
-      "  The call took 0.63 seconds to execute.\n",
-      "- Extracting metadata from the SymbTr-mu2 file: ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede/ussak--sazsemaisi--aksaksemai----neyzen_aziz_dede.mu2\n",
-      "  The call took 0.01 seconds to execute.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Automatic phrase segmentation on the SymbTr-txt score using pre-trained model\n",
     "phrase_bounds = scoreAnalyzer.segment_phrase(txt_filepath, symbtr_name=symbtr_name)\n",
